{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 122,
  "lineage": "35aeced4-7d42-2e8a-e63a-783966039e57",
  "resources": [
    {
      "module": "module.webserver-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5eff06f840b45e9",
            "arn": "arn:aws:ec2:us-east-1:122609731959:instance/i-076027869a827182b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-076027869a827182b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b11d47e0e5ab458f",
            "private_dns": "ip-10-1-1-58.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.58",
            "public_ip": "23.22.124.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0081bddd0d083118c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fc17ad0bd468365b",
            "tags": {
              "Name": "Web Server-1"
            },
            "tags_all": {
              "Name": "Web Server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f2dc3e8e896d7f2a"
            ]
          },
          "dependencies": [
            "module.webserver-network.aws_security_group.web-sg",
            "module.webserver-network.aws_security_group.webserver-sg",
            "module.webserver-network.aws_subnet.web-subnet-1",
            "module.webserver-network.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5eff06f840b45e9",
            "arn": "arn:aws:ec2:us-east-1:122609731959:instance/i-023e386d56ea6a118",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-023e386d56ea6a118",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bc50637ed681410e",
            "private_dns": "ip-10-1-2-229.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.229",
            "public_ip": "100.24.105.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d5a0f775d89ddc0e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0abfada6d58683543",
            "tags": {
              "Name": "Web Server-2"
            },
            "tags_all": {
              "Name": "Web Server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f2dc3e8e896d7f2a"
            ]
          },
          "dependencies": [
            "module.webserver-network.aws_security_group.web-sg",
            "module.webserver-network.aws_security_group.webserver-sg",
            "module.webserver-network.aws_subnet.web-subnet-2",
            "module.webserver-network.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:122609731959:loadbalancer/app/External-LB/d1f567f0bff49e15",
            "arn_suffix": "app/External-LB/d1f567f0bff49e15",
            "desync_mitigation_mode": "defensive",
            "dns_name": "External-LB-654291782.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:122609731959:loadbalancer/app/External-LB/d1f567f0bff49e15",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "External-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0da1bb527a12195d3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0abfada6d58683543"
              },
              {
                "subnet_id": "subnet-0fc17ad0bd468365b"
              }
            ],
            "subnets": [
              "subnet-0abfada6d58683543",
              "subnet-0fc17ad0bd468365b"
            ],
            "vpc_id": "vpc-0e1119d29edb4fc88",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.webserver-network.aws_security_group.web-sg",
            "module.webserver-network.aws_subnet.web-subnet-1",
            "module.webserver-network.aws_subnet.web-subnet-2",
            "module.webserver-network.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:122609731959:listener/app/External-LB/d1f567f0bff49e15/c3d9e2275deab0ed",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:122609731959:targetgroup/ALB-TG/c2fe89cd95627384",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:122609731959:listener/app/External-LB/d1f567f0bff49e15/c3d9e2275deab0ed",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:122609731959:loadbalancer/app/External-LB/d1f567f0bff49e15",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver-loadbalancer.aws_lb.external-elb",
            "module.webserver-loadbalancer.aws_lb_target_group.external-elb",
            "module.webserver-network.aws_security_group.web-sg",
            "module.webserver-network.aws_subnet.web-subnet-1",
            "module.webserver-network.aws_subnet.web-subnet-2",
            "module.webserver-network.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:122609731959:targetgroup/ALB-TG/c2fe89cd95627384",
            "arn_suffix": "targetgroup/ALB-TG/c2fe89cd95627384",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:122609731959:targetgroup/ALB-TG/c2fe89cd95627384",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e1119d29edb4fc88"
          },
          "dependencies": [
            "module.webserver-network.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "external-elb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:122609731959:targetgroup/ALB-TG/c2fe89cd95627384-20230415151133585000000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:122609731959:targetgroup/ALB-TG/c2fe89cd95627384",
            "target_id": "i-076027869a827182b"
          },
          "dependencies": [
            "module.webserver-instance.aws_instance.webserver1",
            "module.webserver-loadbalancer.aws_lb_target_group.external-elb",
            "module.webserver-network.aws_security_group.web-sg",
            "module.webserver-network.aws_security_group.webserver-sg",
            "module.webserver-network.aws_subnet.web-subnet-1",
            "module.webserver-network.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "external-elb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:122609731959:targetgroup/ALB-TG/c2fe89cd95627384-20230415151132070600000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:122609731959:targetgroup/ALB-TG/c2fe89cd95627384",
            "target_id": "i-023e386d56ea6a118"
          },
          "dependencies": [
            "module.webserver-instance.aws_instance.webserver2",
            "module.webserver-loadbalancer.aws_lb_target_group.external-elb",
            "module.webserver-network.aws_security_group.web-sg",
            "module.webserver-network.aws_security_group.webserver-sg",
            "module.webserver-network.aws_subnet.web-subnet-2",
            "module.webserver-network.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.webserver-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122609731959:internet-gateway/igw-001567258048e6f6f",
            "id": "igw-001567258048e6f6f",
            "owner_id": "122609731959",
            "tags": {
              "Name": "TaskIGW"
            },
            "tags_all": {
              "Name": "TaskIGW"
            },
            "vpc_id": "vpc-0e1119d29edb4fc88"
          },
          "dependencies": [
            "module.webserver-network.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-rt",
      "provider": "module.webserver-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122609731959:route-table/rtb-0fdea86ab657ed435",
            "id": "rtb-0fdea86ab657ed435",
            "owner_id": "122609731959",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001567258048e6f6f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "WebRT"
            },
            "tags_all": {
              "Name": "WebRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1119d29edb4fc88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver-network.aws_internet_gateway.igw",
            "module.webserver-network.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "module.webserver-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e2953c0dddbf5a4",
            "route_table_id": "rtb-0fdea86ab657ed435",
            "subnet_id": "subnet-0fc17ad0bd468365b"
          },
          "dependencies": [
            "module.webserver-network.aws_internet_gateway.igw",
            "module.webserver-network.aws_route_table.web-rt",
            "module.webserver-network.aws_subnet.web-subnet-1",
            "module.webserver-network.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "module.webserver-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f6095c07ebb1f19",
            "route_table_id": "rtb-0fdea86ab657ed435",
            "subnet_id": "subnet-0abfada6d58683543"
          },
          "dependencies": [
            "module.webserver-network.aws_internet_gateway.igw",
            "module.webserver-network.aws_route_table.web-rt",
            "module.webserver-network.aws_subnet.web-subnet-2",
            "module.webserver-network.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "module.webserver-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122609731959:security-group/sg-0af711a80131fc63a",
            "description": "Allow inbound traffic from application layer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0af711a80131fc63a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from application layer",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f2dc3e8e896d7f2a"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Database-SG",
            "name_prefix": "",
            "owner_id": "122609731959",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database-SG"
            },
            "tags_all": {
              "Name": "Database-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1119d29edb4fc88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver-network.aws_security_group.web-sg",
            "module.webserver-network.aws_security_group.webserver-sg",
            "module.webserver-network.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "module.webserver-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122609731959:security-group/sg-0da1bb527a12195d3",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da1bb527a12195d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Web-SG",
            "name_prefix": "",
            "owner_id": "122609731959",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web-SG"
            },
            "tags_all": {
              "Name": "Web-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1119d29edb4fc88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver-network.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "module.webserver-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122609731959:security-group/sg-0f2dc3e8e896d7f2a",
            "description": "Allow inbound traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2dc3e8e896d7f2a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from web layer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0da1bb527a12195d3"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Webserver-SG",
            "name_prefix": "",
            "owner_id": "122609731959",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Webserver-SG"
            },
            "tags_all": {
              "Name": "Webserver-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1119d29edb4fc88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver-network.aws_security_group.web-sg",
            "module.webserver-network.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet-1",
      "provider": "module.webserver-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122609731959:subnet/subnet-080db173c953d0d33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080db173c953d0d33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122609731959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application-1a"
            },
            "tags_all": {
              "Name": "Application-1a"
            },
            "vpc_id": "vpc-0e1119d29edb4fc88"
          },
          "dependencies": [
            "module.webserver-network.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet-2",
      "provider": "module.webserver-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122609731959:subnet/subnet-04db0b20f9787c5e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04db0b20f9787c5e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122609731959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application-2b"
            },
            "tags_all": {
              "Name": "Application-2b"
            },
            "vpc_id": "vpc-0e1119d29edb4fc88"
          },
          "dependencies": [
            "module.webserver-network.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-subnet-1",
      "provider": "module.webserver-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122609731959:subnet/subnet-0aadc15cf9266869b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aadc15cf9266869b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122609731959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database-1a"
            },
            "tags_all": {
              "Name": "Database-1a"
            },
            "vpc_id": "vpc-0e1119d29edb4fc88"
          },
          "dependencies": [
            "module.webserver-network.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-subnet-2",
      "provider": "module.webserver-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122609731959:subnet/subnet-019bf26587b2008e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019bf26587b2008e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122609731959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database-2b"
            },
            "tags_all": {
              "Name": "Database-2b"
            },
            "vpc_id": "vpc-0e1119d29edb4fc88"
          },
          "dependencies": [
            "module.webserver-network.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-subnet-1",
      "provider": "module.webserver-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122609731959:subnet/subnet-0fc17ad0bd468365b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc17ad0bd468365b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "122609731959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web-1a"
            },
            "tags_all": {
              "Name": "Web-1a"
            },
            "vpc_id": "vpc-0e1119d29edb4fc88"
          },
          "dependencies": [
            "module.webserver-network.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-subnet-2",
      "provider": "module.webserver-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122609731959:subnet/subnet-0abfada6d58683543",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abfada6d58683543",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "122609731959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web-2b"
            },
            "tags_all": {
              "Name": "Web-2b"
            },
            "vpc_id": "vpc-0e1119d29edb4fc88"
          },
          "dependencies": [
            "module.webserver-network.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "module.webserver-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122609731959:vpc/vpc-0e1119d29edb4fc88",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-01245632b35f4de99",
            "default_route_table_id": "rtb-08b105240238ffe33",
            "default_security_group_id": "sg-07715c9a7c746849c",
            "dhcp_options_id": "dopt-0bbe275d262330386",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e1119d29edb4fc88",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08b105240238ffe33",
            "owner_id": "122609731959",
            "tags": {
              "Name": "TaskVPC"
            },
            "tags_all": {
              "Name": "TaskVPC"
            }
          }
        }
      ]
    }
  ]
}